# neuralnetwork

./: .gitignore  README.md  neuralnetwork.py
cppneuralnetwork/: CMakeLists.txt  main.cpp
cppneuralnetwork/include/: Layer.h  NeuralNetwork.h  Neuron.h
cppneuralnetwork/src/: Layer.cpp  NeuralNetwork.cpp  Neuron.cpp
neuralnetwork/: pyvenv.cfg
